--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.mvc.view.prefix = /WEB-INF/
 spring.mvc.view.suffix = .jsp
 
 server.error.whitelabel.enabled = false
+spring.main.banner-mode = off
