--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -62,13 +62,13 @@ jobs:
       - name: set global env
         id: global_env
         run: |
-          echo "::set-output name=IMAGE_NAME::${GITHUB_REPOSITORY#*/}"
-          echo "::set-output name=DOCKERHUB_IMAGE_NAME::docker.pkg.github.com/${GITHUB_REPOSITORY}/${GITHUB_REPOSITORY#*/}"
+          echo "::set-output name=IMAGE_NAME::httpstatusmocker"
+          echo "::set-output name=DOCKERHUB_IMAGE_NAME::docker.pkg.github.com/httpstatusmocker/httpstatusmocker"
 
       # Build Docker image
       - name: Build and tag image
         run: |
-          docker build -t "${{ steps.global_env.outputs.DOCKERHUB_IMAGE_NAME }}:latest" -t "${{ steps.global_env.outputs.DOCKERHUB_IMAGE_NAME }}:${GITHUB_SHA::8}" .
+          docker build -t "${{ steps.global_env.outputs.DOCKERHUB_IMAGE_NAME }}:latest" -t "${{ steps.global_env.outputs.DOCKERHUB_IMAGE_NAME }}" .
 
       - name: Docker login
         run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p ${{secrets.GITHUB_TOKEN}}
