--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,7 +45,7 @@ jobs:
         id: global_env
         run: |
           echo "::set-output name=IMAGE_NAME::httpstatusmocker"
-          echo "::set-output name=DOCKERHUB_IMAGE_NAME::docker.pkg.github.com/httpstatusmocker/httpstatusmocker"
+          echo "::set-output name=DOCKERHUB_IMAGE_NAME::docker.pkg.github.com/alnat/httpstatusmocker/httpstatusmocker"
 
       # Build Docker image
       - name: Build and tag image
@@ -58,5 +58,5 @@ jobs:
       # Publish image
       - name: Publish image
         env:
-          IMAGE_NAME: httpstatusmocker:latest
+          IMAGE_NAME: alnat/httpstatusmocker:latest
         run: docker push "docker.pkg.github.com/alnat/httpstatusmocker/${{ steps.global_env.outputs.IMAGE_NAME }}"
