--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.mvc.view.suffix = .jsp
 
 server.error.whitelabel.enabled = false
 spring.main.banner-mode = off
+
+management.endpoints.web.exposure.include = *
